--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Shookey's Suburbia</title>
+    <title>Borg Cube Proxy</title>
     
     <style>
       body {
@@ -15,9 +15,9 @@
       }
     </style>
     
-    <link href="https://yt3.ggpht.com/1c80pYw3i91A2WnvjjIObCe6_PT4-lTUp5Eg3Vc4igdvFUumPwJHNWElworOoFhpd_hiN0lc=s88-c-k-c0x00ffffff-no-rj" rel="shortcut icon" type="text/css">
+    <link href="https://borgcube.codesalvageon.repl.co/static/borg.png" rel="shortcut icon" type="text/css">
   </head>
   <body>
-    <iframe src="https://Shookeys-Suburbia.codesalvageon.repl.co" frameBorder="0"></iframe>
+    <iframe src="https://borgcube.codesalvageon.repl.co/" frameBorder="0"></iframe>
   </body>
 </html>
